# resend-cli

./: Cargo.toml  README.md
docs/plans/: 2025-01-15-resend-cli-design.md  2025-01-15-resend-cli-implementation.md
src/: client.rs  config.rs  main.rs  types.rs
src/commands/: api_keys.rs  config.rs  domains.rs  emails.rs  mod.rs  templates.rs
src/formatters/: json.rs  mod.rs  table.rs
