[package]
name = "resend"
version = "0.1.0"
edition = "2021"
description = "A command-line interface for the Resend email platform"
authors = ["Ben"]
license = "MIT"

[[bin]]
name = "resend"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.16"
directories = "5"
dirs = "5"
thiserror = "2"
anyhow = "1"
dialoguer = "0.11"
dotenvy = "0.15"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
